--- a/MvvmCrossUniversalTest/MvvmCrossUniversalTest.Windows/MvvmCrossUniversalTest.Windows.csproj
+++ b/MvvmCrossUniversalTest/MvvmCrossUniversalTest.Windows/MvvmCrossUniversalTest.Windows.csproj
@@ -103,9 +103,6 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="MainPage.xaml.cs">
-      <DependentUpon>MainPage.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -119,12 +116,6 @@
     <Content Include="Assets\SmallLogo.scale-100.png" />
     <Content Include="Assets\SplashScreen.scale-100.png" />
     <Content Include="Assets\StoreLogo.scale-100.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="MainPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Cirrious.CrossCore">
@@ -142,9 +133,12 @@
     <Reference Include="Cirrious.MvvmCross.WindowsCommon">
       <HintPath>..\lib\Cirrious.MvvmCross.WindowsCommon.dll</HintPath>
     </Reference>
-    <Reference Include="Cirrious.MvvmCross.WindowsStore">
-      <HintPath>..\lib\Cirrious.MvvmCross.WindowsStore.dll</HintPath>
-    </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\MvvmCrossUniversalTest.Core\MvvmCrossUniversalTest.Core.csproj">
+      <Project>{4b213af9-e5dd-4ceb-8de8-83ba643d96c8}</Project>
+      <Name>MvvmCrossUniversalTest.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
