--- a/MvvmCrossUniversalTest/MvvmCrossUniversalTest.WindowsPhone/MvvmCrossUniversalTest.WindowsPhone.csproj
+++ b/MvvmCrossUniversalTest/MvvmCrossUniversalTest.WindowsPhone/MvvmCrossUniversalTest.WindowsPhone.csproj
@@ -105,6 +105,9 @@
     <Reference Include="Cirrious.MvvmCross.Localization">
       <HintPath>..\lib\Cirrious.MvvmCross.Localization.dll</HintPath>
     </Reference>
+    <Reference Include="Cirrious.MvvmCross.Plugins.Messenger">
+      <HintPath>..\lib\portable-win+net45+wp8+win8+wpa81+MonoTouch+MonoAndroid\Cirrious.MvvmCross.Plugins.Messenger.dll</HintPath>
+    </Reference>
     <Reference Include="Cirrious.MvvmCross.WindowsCommon">
       <HintPath>..\lib\Cirrious.MvvmCross.WindowsCommon.dll</HintPath>
     </Reference>
